# PhotoHive_DSP

./: .gitignore  README.md  __init__.py  blur_profile.c  blur_profile.h  color_quantization.c  color_quantization.h  core.py  example.py  fft_processing.c  fft_processing.h  filtering.c  filtering.h  generate_fft_normalizer.py  imageDecompressor.py  imageSaver.py  image_processing.c  image_processing.h  image_processing.py  interface.c  interface.h  lib.py  main.c  notes.txt  structures.py  utilities.c  utilities.h  utils.py
PhotoHive_DSP_lib/: README.md  __init__.py  core.py  lib.py  setup.py  structures.py  utils.py
PhotoHive_DSP_lib.egg-info/: PKG-INFO  SOURCES.txt
lookups/: fft_normalizer.txt
reports/: 8_report.txt
src/: CMakeLists.txt  blur_profile.c  blur_profile.h  color_quantization.h  debug.c  debug.h  filtering.c  filtering.h  image_processing.c  image_processing.h  interface.c  interface.h  types.h  utilities.c  utilities.h
src/test/: image_utils.py  test.c
test/: test.c
